--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <div id="header">
-        <img src="./img/71140909_1912994362137687_2158362258994888704_n.png" alt="" class="header_img">
+        <a href="#">
+            <img src="./img/71140909_1912994362137687_2158362258994888704_n.png" alt="" class="header_img">
+
+        </a>
         <ul class="header_list">
             <i class="fa-solid fa-magnifying-glass header_search js_search_btn">
                 <div id="header_search_items" class="header_search_items js_search_box">
@@ -59,9 +62,9 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Thông báo chung</li>
-                        <li>Lịch thi</li>
-                        <li>Văn bản</li>
+                        <li class="disabled">Thông báo chung</li>
+                        <li><a href="./lichthi.html">Lịch thi</a></li>
+                        <li class="disabled">Văn bản</li>
                     </ul>
                 </div>
             </li>
@@ -70,9 +73,9 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Cơ cấu tổ chức</li>
+                        <li class="disabled">Cơ cấu tổ chức</li>
                         <li><a href="./gioithieu.html">Giới thiệu chung</a></li>
-                        <li>Thương hiệu</li>
+                        <li class="disabled">Thương hiệu</li>
                     </ul>
                 </div>
             </li>
@@ -299,6 +302,7 @@
             </div>
         </div>
     </div>
+    <script src="https://uhchat.net/code.php?f=bd5707"></script>
     <script src="./main.js"></script>
 </body>
 </html>
