--- a/lichthi.html
+++ b/lichthi.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./gioithieu.css">
-    <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./chung.css">
+    <link rel="stylesheet" href="./lichthi.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div id="header">
-        <a href="./index.html">
-
+        <a href="#">
             <img src="./img/71140909_1912994362137687_2158362258994888704_n.png" alt="" class="header_img">
+
         </a>
         <ul class="header_list">
             <i class="fa-solid fa-magnifying-glass header_search js_search_btn">
@@ -61,9 +63,9 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Thông báo chung</li>
+                        <li class="disabled">Thông báo chung</li>
                         <li>Lịch thi</li>
-                        <li>Văn bản</li>
+                        <li class="disabled">Văn bản</li>
                     </ul>
                 </div>
             </li>
@@ -72,9 +74,9 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Cơ cấu tổ chức</li>
+                        <li class="disabled">Cơ cấu tổ chức</li>
                         <li><a href="./gioithieu.html">Giới thiệu chung</a></li>
-                        <li>Thương hiệu</li>
+                        <li class="disabled">Thương hiệu</li>
                     </ul>
                 </div>
             </li>
@@ -82,28 +84,73 @@
     </div>
     <div id="body">
         <div class="body_left">
-            <h1>Giới thiệu về trường Lương Thế Vinh</h1>
-            <p style="font-size: 14px; color: #333; ">16 Tháng Một, 2017</p>
-            <p>Trường THPT Lương Thế Vinh được thành lập ngày 01/06/1989 theo quyết định của UBND Thành phố Hà Nội, do nhà giáo Văn Như Cương làm hiệu trưởng. Từ năm học đầu tiên (1989 - 1990) với 800 học sinh khối THPT, đến nay trường đã có hơn 3400 học sinh ở cả 2 khối cấp. Ngay từ khi mới thành lập, nhà trường luôn kiên trì mục tiêu đào tạo kép: “Giáo dục toàn diện cho học sinh thi đỗ tốt nghiệp và chuẩn bị tốt nhất cho học sinh thi đỗ vào các trường Đại học và Cao đẳng”.</p>
-            <h3>Phương châm của nhà trường là “dạy thật - học thật”</h3>
-            <p><b>- Dạy thật:</b> Hiểu rõ vai trò quyết định của người Thầy với việc thành bại của sự nghiệp giáo dục - Nhà trường luôn đảm bảo có một tập thể giáo viên với phẩm chất đạo đức tốt, tâm huyết với nghề, có kinh nghiệm và năng lực chuyên môn sâu.</p>
-            <p>Chương trình học của mỗi lớp được cấu tạo thành hai phần: chương trình Phổ Thông và chương trình luyện thi Đại học, nhưng hai phần ấy được lồng ghép vào nhau một cách hợp lí ngay trong mỗi tiết học. Trong mỗi bài học, ngoài những yêu cầu chung như ở các trường Quốc lập khác, còn có một yêu cầu nữa đối với học sinh: phải đạt đến trình độ có thể làm được các bài thi vào Đại học. Bởi vậy các bài kiểm tra cuối học kì thường khó hơn mức quy định chung của Sở Giáo dục. Chương trình của trường bảo đảm cho các em không phải đi học thêm dưới bất kì hình thức nào.</p>
-            <p><b>- Học thật:</b> đó là học không phải để lấy điểm để lấy kiến thức đơn thuần mà học để có kỹ năng thu nhận kiến thức, kỹ năng sáng tạo, kỹ năng xử lý và khả năng thích ứng toàn cầu.</p>
-            <p>Nhà trường luôn coi trọng việc bồi dưỡng năng lực tự học của học sinh ở cả 2 cấp, nâng cao tính tự lập và nhận trách nhiệm về phía mình.</p>
-            <p>Bên cạnh việc học văn hóa nhà trường luôn tổ chức các hoạt động giáo dục phối hợp tạo ra con người sống có hiểu biết, sống khỏe, sống đẹp. Các câu lạc bộ Bóng rổ, Bóng đá, dance sport, các hoạt động của Thanh niên tình nguyện, các hoạt động ngoại khóa, Văn nghệ, các chuyến đi Cứu trợ, Từ thiện…giúp học sinh Lương Thế Vinh năng động và phát triển toàn diện hơn.</p>
-            <p>Luôn chú trọng xây dựng một môi trường giáo dục lành mạnh kết hợp Nhà trường, Gia đình và Xã hội, ngăn chặn và chống lại sự xâm nhập của các tệ nạn xã hội, hiện tượng tiêu cực vào nhà trường - Trường Lương Thế Vinh thực sự đã phần nào khắc phục được tình trạng chỉ quan tâm đến chữ mà chưa quan tâm tới dạy người.</p>
-            <p>Hơn 20 năm phát triển với những thành tích đạt được Trường THPT Lương Thế Vinh “ được xã hội đánh giá cao” và đã trở thành“thương hiệu niềm tin” của những bậc cha mẹ và của các em học sinh mong muốn hướng tới sự toàn diện.</p>
-            <p>Từ những năm đầu thành lập ,địa điểm học phải đi thuê mượn với những khó khăn, vất vả về cơ sở vật chất - Thầy trò trường Lương Thế Vinh luôn khắc phục, vượt khó với Slogan “có chí thì nên” đến nay trường đã có một cơ ngơi khang trang của riêng mình tại C5 Nam Trung Yên - đáp ứng được phần nào sự lớn mạnh không ngừng của trường.</p>
-            <h3>Thành tích của trường:</h3>
-            <p><b>- Bậc THCS:</b></p>
-            <p>o Tỷ lệ đỗ tốt nghiệp 100%</p>
-            <p>o Điểm thi vào THPT (theo thống kê và xếp loại của SGD&ĐT Hà Nội) những năm gần đây đều đứng trong top 3 các trường có điểm TB 2 môn Toán, Văn cao nhất</p>
-            <p><b>- Bậc THPT:</b></p>
-            <p>o Các năm gần đây đều đỗ tốt nghiệp 100% (đặc biệt có năm Lương Thế Vinh là trường duy nhất ở Hà Nội đỗ tốt nghiệp 100%)</p>
-            <p>o Kết quả đỗ vào các trường Đại học thường đạt 92%</p>
-            <p>o Theo Thống kê của Bộ GD&ĐT về xếp loại các trường THPT (không kể các trường chuyên) có điểm thi vào Đại học từ cao xuống thấp</p>
-            <p style="text-indent: 2em;">§ Năm 2009 - 2010: LTV đứng thứ 7 toàn quốc, thứ 2 Hà Nội</p>
-            <p style="text-indent: 2em;">§ Năm 2010 - 2011: LTV đứng thứ 7 toàn quốc, thứ 1 Hà Nội</p>
+            <h2>THÔNG BÁO LỊCH KIỂM TRA GIỮA HỌC KỲ 1 NĂM HỌC 2022 – 2023</h2>
+            <div id="fb-root"></div>
+            <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v15.0" nonce="x6lm6lN8"></script>
+            <div class="fb-like" data-href="http://127.0.0.1:5500/gioithieu.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+            <h3>Thông báo lịch kiểm tra giữa học kì I năm học 2022 – 2023 đối với học sinh (khối 6,7,8,9,10,11,12) </h3>
+            <p>Nhà trường xin thông báo về lịch thi giữa học kì I đối với 2 cấp THCS & THPT sẽ diễn ra từ ngày 17/10/2022 đến ngày 19/10/2022 như sau:</p>
+            <fieldset>
+                <legend>Trường THCS & THPT Lương Thế Vinh</legend>
+                <h4>LỊCH KIỂM TRA GIỮA KỲ HỌC KỲ I</h4>
+                <h5>NĂM HỌC 2022-2023</h5>
+                <h5>(KHỐI 6,7,8,9,10,11,12)</h5>
+                <table border="1">
+                    <tr>
+                        <th class="c1">Thứ - Ngày</th>
+                        <th class="c2">Buổi</th>
+                        <th class="c3">Ca</th>
+                        <th class="c4">Thời gian</th>
+                        <th class="c5" style="text-align: center; padding: 0;">Môn Kiểm tra - Khối</th>
+                        <th class="c6">Thời gian</th>
+                    </tr>
+                </table>
+                <table border="1">
+                    <tr>
+                        <td rowspan="2" class="c1">Thứ 2 <br> Ngày17/10/2022 </td>
+                        <td class="c2">Sáng</td>
+                        <td class="c3">Ca 1 <br> Ca 2</td>
+                        <td class="c4">07h30 - 09h05 <br> 09h30 - 10h35</td>
+                        <td class="c5">Ngữ Văn (Khối 10,11,12) <br> Tiếng Anh (Khối 10,11,12)</td>
+                        <td class="c6">90p <br> 60p</td>
+                    </tr>
+                    <tr>
+                        <td class="c2">Chiều</td>
+                        <td class="c3">Ca 1</td>
+                        <td class="c4">14h00 - 15h35</td>
+                        <td class="c5">Toán (Khối 10,11,12)</td>
+                        <td class="c6">90p</td>
+                    </tr>
+                </table>
+                <table border="1">
+                    <tr>
+                        <td rowspan="2" class="c1">Thứ 3 <br> Ngày18/10/2022 </td>
+                        <td class="c2">Sáng</td>
+                        <td class="c3">Ca 1 <br> Ca 2</td>
+                        <td class="c4">07h30 - 09h05 <br> 09h30 - 10h35</td>
+                        <td class="c5">Ngữ Văn (Khối 6,7,8,9) <br> Tiếng Anh (Khối 6,7,8,9)</td>
+                        <td class="c6">90p <br> 60p</td>
+                    </tr>
+                    <tr>
+                        <td class="c2">Chiều</td>
+                        <td class="c3">Ca 1</td>
+                        <td class="c4">14h00 - 15h35</td>
+                        <td class="c5">Toán (Khối 6,7,8,9)</td>
+                        <td class="c6">90p</td>
+                    </tr>
+                </table>
+                <table border="1">
+                    <tr>
+                        <td rowspan="2" class="c1">Thứ 4 <br> Ngày19/10/2022 </td>
+                        <td class="c2">Sáng</td>
+                        <td class="c3">Ca 1 <br> Ca 2</td>
+                        <td class="c4">07h30 - 09h05 <br> 09h30 - 10h35</td>
+                        <td class="c5">Hóa Học (Khối 10TH+TN1;khối 11A+A1;khối 12A+A1) <br> Vật Lý (Khối 10TN+TN1+TN2;khối 11A+A1;khối 12A+A1)</td>
+                        <td class="c6">90p <br> 60p</td>
+                    </tr>
+                </table>
+                <h6>Chú ý:</h6>
+            </fieldset>
         </div>
         <div class="body_right">
             <div class="content_sukien_nav content_nav">
@@ -117,9 +164,6 @@
             </div>
         </div>
     </div>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v15.0" nonce="x6lm6lN8"></script>
-    <div class="fb-like" data-href="http://127.0.0.1:5500/gioithieu.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
     <div id="footer">
         <div class="footer_1">
             <img src="./img/71140909_1912994362137687_2158362258994888704_n.png" alt="">
@@ -208,8 +252,7 @@
             </div>
         </div>
     </div>
-    <script src="./main.js"></script>
     <script src="https://uhchat.net/code.php?f=bd5707"></script>
-
+    <script src="./main.js"></script>
 </body>
 </html>
