--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="./chung.css"> -->
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./animation.css">
     <link rel="icon" href="icon_path" type="image/icon type">
 </head>
 <body>
     <div id="header">
-        <a href="#">
+        <a href="./index.html">
             <img src="./img/71140909_1912994362137687_2158362258994888704_n.png" alt="" class="header_img">
 
         </a>
@@ -28,22 +28,22 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li class="js_log-in">Đăng nhập</li>
-                        <li class="js_sign-in">Đăng ký</li>
+                        <li style="padding-left: 12px;" class="js_log-in">Đăng nhập</li>
+                        <li style="padding-left: 12px;" class="js_sign-in">Đăng ký</li>
                     </ul>
                 </div>
             </li>
             <li class="header_list_child">
-                <a href="">Tin tức</a>
+                <a href="./tintuc.html">Tin tức</a>
             </li>
             <li class="header_list_child">
                 Sự kiện
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Hoạt động ngoại khóa</li>
-                        <li>Hoạt động xã hội</li>
-                        <li>Kỉ niệm 25 năm</li>
+                        <li class="disabled">Hoạt động ngoại khóa</li>
+                        <li class="disabled">Hoạt động xã hội</li>
+                        <li><a href="./kiniem.html">Kỉ niệm 25 năm</a></li>
                     </ul>
                 </div>
             </li>
@@ -52,8 +52,8 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Tuyển sinh lớp 6</li>
-                        <li>Tuyển sinh lớp 10</li>
+                        <li class="disabled">Tuyển sinh lớp 6</li>
+                        <li class="disabled">Tuyển sinh lớp 10</li>
                     </ul>
                 </div>
             </li>
