--- a/kiniem.html
+++ b/kiniem.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./gioithieu.css">
-    <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./chung.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div id="header">
@@ -82,28 +83,41 @@
     </div>
     <div id="body">
         <div class="body_left">
-            <h1>Giới thiệu về trường Lương Thế Vinh</h1>
+            <h1>Chương trình kỷ niệm 25 năm trường THPT Lương Thế Vinh</h1>
             <p style="font-size: 14px; color: #333; ">16 Tháng Một, 2017</p>
-            <p>Trường THPT Lương Thế Vinh được thành lập ngày 01/06/1989 theo quyết định của UBND Thành phố Hà Nội, do nhà giáo Văn Như Cương làm hiệu trưởng. Từ năm học đầu tiên (1989 - 1990) với 800 học sinh khối THPT, đến nay trường đã có hơn 3400 học sinh ở cả 2 khối cấp. Ngay từ khi mới thành lập, nhà trường luôn kiên trì mục tiêu đào tạo kép: “Giáo dục toàn diện cho học sinh thi đỗ tốt nghiệp và chuẩn bị tốt nhất cho học sinh thi đỗ vào các trường Đại học và Cao đẳng”.</p>
-            <h3>Phương châm của nhà trường là “dạy thật - học thật”</h3>
-            <p><b>- Dạy thật:</b> Hiểu rõ vai trò quyết định của người Thầy với việc thành bại của sự nghiệp giáo dục - Nhà trường luôn đảm bảo có một tập thể giáo viên với phẩm chất đạo đức tốt, tâm huyết với nghề, có kinh nghiệm và năng lực chuyên môn sâu.</p>
-            <p>Chương trình học của mỗi lớp được cấu tạo thành hai phần: chương trình Phổ Thông và chương trình luyện thi Đại học, nhưng hai phần ấy được lồng ghép vào nhau một cách hợp lí ngay trong mỗi tiết học. Trong mỗi bài học, ngoài những yêu cầu chung như ở các trường Quốc lập khác, còn có một yêu cầu nữa đối với học sinh: phải đạt đến trình độ có thể làm được các bài thi vào Đại học. Bởi vậy các bài kiểm tra cuối học kì thường khó hơn mức quy định chung của Sở Giáo dục. Chương trình của trường bảo đảm cho các em không phải đi học thêm dưới bất kì hình thức nào.</p>
-            <p><b>- Học thật:</b> đó là học không phải để lấy điểm để lấy kiến thức đơn thuần mà học để có kỹ năng thu nhận kiến thức, kỹ năng sáng tạo, kỹ năng xử lý và khả năng thích ứng toàn cầu.</p>
-            <p>Nhà trường luôn coi trọng việc bồi dưỡng năng lực tự học của học sinh ở cả 2 cấp, nâng cao tính tự lập và nhận trách nhiệm về phía mình.</p>
-            <p>Bên cạnh việc học văn hóa nhà trường luôn tổ chức các hoạt động giáo dục phối hợp tạo ra con người sống có hiểu biết, sống khỏe, sống đẹp. Các câu lạc bộ Bóng rổ, Bóng đá, dance sport, các hoạt động của Thanh niên tình nguyện, các hoạt động ngoại khóa, Văn nghệ, các chuyến đi Cứu trợ, Từ thiện…giúp học sinh Lương Thế Vinh năng động và phát triển toàn diện hơn.</p>
-            <p>Luôn chú trọng xây dựng một môi trường giáo dục lành mạnh kết hợp Nhà trường, Gia đình và Xã hội, ngăn chặn và chống lại sự xâm nhập của các tệ nạn xã hội, hiện tượng tiêu cực vào nhà trường - Trường Lương Thế Vinh thực sự đã phần nào khắc phục được tình trạng chỉ quan tâm đến chữ mà chưa quan tâm tới dạy người.</p>
-            <p>Hơn 20 năm phát triển với những thành tích đạt được Trường THPT Lương Thế Vinh “ được xã hội đánh giá cao” và đã trở thành“thương hiệu niềm tin” của những bậc cha mẹ và của các em học sinh mong muốn hướng tới sự toàn diện.</p>
-            <p>Từ những năm đầu thành lập ,địa điểm học phải đi thuê mượn với những khó khăn, vất vả về cơ sở vật chất - Thầy trò trường Lương Thế Vinh luôn khắc phục, vượt khó với Slogan “có chí thì nên” đến nay trường đã có một cơ ngơi khang trang của riêng mình tại C5 Nam Trung Yên - đáp ứng được phần nào sự lớn mạnh không ngừng của trường.</p>
-            <h3>Thành tích của trường:</h3>
-            <p><b>- Bậc THCS:</b></p>
-            <p>o Tỷ lệ đỗ tốt nghiệp 100%</p>
-            <p>o Điểm thi vào THPT (theo thống kê và xếp loại của SGD&ĐT Hà Nội) những năm gần đây đều đứng trong top 3 các trường có điểm TB 2 môn Toán, Văn cao nhất</p>
-            <p><b>- Bậc THPT:</b></p>
-            <p>o Các năm gần đây đều đỗ tốt nghiệp 100% (đặc biệt có năm Lương Thế Vinh là trường duy nhất ở Hà Nội đỗ tốt nghiệp 100%)</p>
-            <p>o Kết quả đỗ vào các trường Đại học thường đạt 92%</p>
-            <p>o Theo Thống kê của Bộ GD&ĐT về xếp loại các trường THPT (không kể các trường chuyên) có điểm thi vào Đại học từ cao xuống thấp</p>
-            <p style="text-indent: 2em;">§ Năm 2009 - 2010: LTV đứng thứ 7 toàn quốc, thứ 2 Hà Nội</p>
-            <p style="text-indent: 2em;">§ Năm 2010 - 2011: LTV đứng thứ 7 toàn quốc, thứ 1 Hà Nội</p>
+            <h2>I.MỤC ĐÍCH</h2>
+            <p>1. Chương trình là ngày hội nhìn lại những thành quả đạt được của Thầy và Trò trường Lương Thế Vinh qua 25 năm. Giới thiệu những năm tháng xây dựng, phát triển của trường, qua đó ghi nhận những công lao đóng góp của những thế hệ thầy cô, cán bộ, công nhân viên, những thế hệ học sinh vững vàng, tài giỏi, góp phần xây dựng đất nước.</p>
+            <p>2. Nhân dịp này, nhà trường cùng các thế hệ thầy cô, học sinh, cán bộ công nhân viên nhà trường và đại diện Cha mẹ học sinh sẽ được gặp gỡ, giao lưu nhằm ôn lại quá trình hình thành và phát triển của nhà trường và mỗi cá nhân, khơi dậy lòng tự hào về một mái trường, một thương hiệu, tiếp tục nâng cao chất lượng dạy và học.</p>            
+            <p>3. Hướng về ngày hội trường 25.5, các lớp cũng có quá trình “tìm lại mình”, “tìm lại nhau”…</p>
+            <p>4. Chương trình cũng là thông điệp của thầy Văn Như Cương nhắn gửi thế hệ Thầy và Trò trường Lương Thế Vinh hiện tại và tương lai. Khẳng định hướng đi đúng đắn và bền vững của nhà trường.</p>
+            <h2>II. THỜI GIAN VÀ ĐỊA ĐIỂM:</h2>
+            <p>1. Thời gian: Chủ nhật, ngày 25 tháng 5 năm 2014</p>
+            <p>Buổi sáng (Từ 7h00 đến 11h30): Chương trình của học sinh cũ và toàn thể giáo viên, có đại diện học sinh đang học</p>
+            <p>Buổi chiều (Từ 1h đến 5h): Hoạt động của học sinh đang học: Gian hàng, trò chơi, hoạt động văn hóa, thể thao,…</p>
+            <p>Buổi tối (Từ 7h đến 10h): Gala 25 năm Lương Thế Vinh: Các hoạt động nghệ thuật, ca nhạc…</p>
+            <p>2. Địa điểm: Sân trường cơ sở A, C5 – Nam Trung Yên (Sau siêu thị BigC Trần Duy Hưng).</p>
+            <h3>III. NỘI DUNG:</h3>
+            <p>Buổi sáng: Chương trình của học sinh cũ và tòan thể giáo viên</p>
+            <p>Từ 7h đến 8h:</p>
+            <p>Đón các thầy cô, đón học sinh cũ</p>
+            <p>Đội lễ tân học sinh đón tiếp và hướng dẫn các thầy cô và anh chị học sinh cũ tìm vị trí. Hướng dẫn các anh chị tìm các thầy cô, tham quan trường, lớp học, giới thiệu các khu vực triển lãm,…</p>
+            <p>Xung quanh sân trường có kê bàn, ghế theo từng khu vực của từng khóa. Giữa sân có kê ghế khán giả.</p>
+            <p>Chiếu phim phóng sự và hình ảnh tư liệu về trường tại màn hình Led trên sân khấu và phòng đón khách.</p>
+            <p>Từ 8h đến 8h10:</p>
+            <p>Ổn định vị trí, chuẩn bị cho lễ kỉ niệm</p>
+            <p>Từ 8h10 đến 8h40:</p>
+            <p>Chương trình văn nghệ chào mừng. Đây là chương trình được dàn dựng công phu với đội ngũ diễn viên, vũ công, ca sĩ rất đông, rất tài năng. Tuy nhiên, tất cả đều được giữ bí mật…</p>
+            <p>Từ 8h40 đến 9h10:</p>
+            <p>Tuyên bố lí do, giới thiệu đại biểu. Phát biểu của các thầy cô, học sinh cũ. Phát biểu của đại diện CMHS. Văn nghệ, video đan xen.</p>
+            <p>Từ 9h10 đến 9h40:</p>
+            <p>Giao lưu, tọa đàm giáo viên, học sinh các thế hệ.</p>
+            <p>Từ 9h40 đến 10h:</p>
+            <p>Diễn ca sử thi “LTV – 25 năm phát triển và trưởng thành”</p>
+            <p>Từ 10h đến 10h15:</p>
+            <p>Phát biểu của thầy Văn Như Cương về định hướng nhà trường trong tương lai.</p>
+            <p>Mời dự tiệc với nhà trường.</p>
+            <p>Sau 10h15:</p>
+            <p>Các lớp, các khóa giao lưu và tổ chức các hoạt động theo chương trình của mình.</p>
         </div>
         <div class="body_right">
             <div class="content_sukien_nav content_nav">
