--- a/lichthi.html
+++ b/lichthi.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div id="header">
-        <a href="#">
+        <a href="./index.html">
             <img src="./img/71140909_1912994362137687_2158362258994888704_n.png" alt="" class="header_img">
 
         </a>
@@ -29,22 +29,22 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li class="js_log-in">Đăng nhập</li>
-                        <li class="js_sign-in">Đăng ký</li>
+                        <li style="padding-left: 12px;" class="js_log-in">Đăng nhập</li>
+                        <li style="padding-left: 12px;" class="js_sign-in">Đăng ký</li>
                     </ul>
                 </div>
             </li>
             <li class="header_list_child">
-                <a href="">Tin tức</a>
+                <a href="./tintuc.html">Tin tức</a>
             </li>
             <li class="header_list_child">
                 Sự kiện
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Hoạt động ngoại khóa</li>
-                        <li>Hoạt động xã hội</li>
-                        <li>Kỉ niệm 25 năm</li>
+                        <li class="disabled">Hoạt động ngoại khóa</li>
+                        <li class="disabled">Hoạt động xã hội</li>
+                        <li><a href="./kiniem.html">Kỉ niệm 25 năm</a></li>
                     </ul>
                 </div>
             </li>
@@ -53,8 +53,8 @@
                 <i class="fa-solid fa-angle-down"></i>
                 <div class="header_list_sub">
                     <ul>
-                        <li>Tuyển sinh lớp 6</li>
-                        <li>Tuyển sinh lớp 10</li>
+                        <li class="disabled">Tuyển sinh lớp 6</li>
+                        <li class="disabled">Tuyển sinh lớp 10</li>
                     </ul>
                 </div>
             </li>
@@ -64,7 +64,7 @@
                 <div class="header_list_sub">
                     <ul>
                         <li class="disabled">Thông báo chung</li>
-                        <li>Lịch thi</li>
+                        <li><a href="./lichthi.html">Lịch thi</a></li>
                         <li class="disabled">Văn bản</li>
                     </ul>
                 </div>
@@ -150,6 +150,13 @@
                     </tr>
                 </table>
                 <h6>Chú ý:</h6>
+                <ul>
+                    <li>Học sinh tự chuẩn bị giấy thi, giấy nháp khi đi thi. Học sinh đi thi đúng giờ, có mặt tại phòng thi trước 30'.</li>
+                    <li>Thứ 3: Học sinh cấp 3 được nghỉ học cả ngày. HS khối cấp 2 ăn trưa tại trường.</li>
+                    <li>Thứ 2+3: HS khối cấp 2 được nghỉ học.</li>
+                    <li>Các ngày còn lại trong tuần học sinh đi học bình thường.</li>
+                </ul>
+                <h6>BAN GIÁM HIỆU</h6>
             </fieldset>
         </div>
         <div class="body_right">
