--- a/tintuc.html
+++ b/tintuc.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./gioithieu.css">
-    <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./chung.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/1d850e7f12.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div id="header">
@@ -82,28 +83,14 @@
     </div>
     <div id="body">
         <div class="body_left">
-            <h1>Giới thiệu về trường Lương Thế Vinh</h1>
+            <h1>TĂNG CƯỜNG PHÒNG CHỐNG BỆNH ĐẬU MÙA KHỈ</h1>
             <p style="font-size: 14px; color: #333; ">16 Tháng Một, 2017</p>
-            <p>Trường THPT Lương Thế Vinh được thành lập ngày 01/06/1989 theo quyết định của UBND Thành phố Hà Nội, do nhà giáo Văn Như Cương làm hiệu trưởng. Từ năm học đầu tiên (1989 - 1990) với 800 học sinh khối THPT, đến nay trường đã có hơn 3400 học sinh ở cả 2 khối cấp. Ngay từ khi mới thành lập, nhà trường luôn kiên trì mục tiêu đào tạo kép: “Giáo dục toàn diện cho học sinh thi đỗ tốt nghiệp và chuẩn bị tốt nhất cho học sinh thi đỗ vào các trường Đại học và Cao đẳng”.</p>
-            <h3>Phương châm của nhà trường là “dạy thật - học thật”</h3>
-            <p><b>- Dạy thật:</b> Hiểu rõ vai trò quyết định của người Thầy với việc thành bại của sự nghiệp giáo dục - Nhà trường luôn đảm bảo có một tập thể giáo viên với phẩm chất đạo đức tốt, tâm huyết với nghề, có kinh nghiệm và năng lực chuyên môn sâu.</p>
-            <p>Chương trình học của mỗi lớp được cấu tạo thành hai phần: chương trình Phổ Thông và chương trình luyện thi Đại học, nhưng hai phần ấy được lồng ghép vào nhau một cách hợp lí ngay trong mỗi tiết học. Trong mỗi bài học, ngoài những yêu cầu chung như ở các trường Quốc lập khác, còn có một yêu cầu nữa đối với học sinh: phải đạt đến trình độ có thể làm được các bài thi vào Đại học. Bởi vậy các bài kiểm tra cuối học kì thường khó hơn mức quy định chung của Sở Giáo dục. Chương trình của trường bảo đảm cho các em không phải đi học thêm dưới bất kì hình thức nào.</p>
-            <p><b>- Học thật:</b> đó là học không phải để lấy điểm để lấy kiến thức đơn thuần mà học để có kỹ năng thu nhận kiến thức, kỹ năng sáng tạo, kỹ năng xử lý và khả năng thích ứng toàn cầu.</p>
-            <p>Nhà trường luôn coi trọng việc bồi dưỡng năng lực tự học của học sinh ở cả 2 cấp, nâng cao tính tự lập và nhận trách nhiệm về phía mình.</p>
-            <p>Bên cạnh việc học văn hóa nhà trường luôn tổ chức các hoạt động giáo dục phối hợp tạo ra con người sống có hiểu biết, sống khỏe, sống đẹp. Các câu lạc bộ Bóng rổ, Bóng đá, dance sport, các hoạt động của Thanh niên tình nguyện, các hoạt động ngoại khóa, Văn nghệ, các chuyến đi Cứu trợ, Từ thiện…giúp học sinh Lương Thế Vinh năng động và phát triển toàn diện hơn.</p>
-            <p>Luôn chú trọng xây dựng một môi trường giáo dục lành mạnh kết hợp Nhà trường, Gia đình và Xã hội, ngăn chặn và chống lại sự xâm nhập của các tệ nạn xã hội, hiện tượng tiêu cực vào nhà trường - Trường Lương Thế Vinh thực sự đã phần nào khắc phục được tình trạng chỉ quan tâm đến chữ mà chưa quan tâm tới dạy người.</p>
-            <p>Hơn 20 năm phát triển với những thành tích đạt được Trường THPT Lương Thế Vinh “ được xã hội đánh giá cao” và đã trở thành“thương hiệu niềm tin” của những bậc cha mẹ và của các em học sinh mong muốn hướng tới sự toàn diện.</p>
-            <p>Từ những năm đầu thành lập ,địa điểm học phải đi thuê mượn với những khó khăn, vất vả về cơ sở vật chất - Thầy trò trường Lương Thế Vinh luôn khắc phục, vượt khó với Slogan “có chí thì nên” đến nay trường đã có một cơ ngơi khang trang của riêng mình tại C5 Nam Trung Yên - đáp ứng được phần nào sự lớn mạnh không ngừng của trường.</p>
-            <h3>Thành tích của trường:</h3>
-            <p><b>- Bậc THCS:</b></p>
-            <p>o Tỷ lệ đỗ tốt nghiệp 100%</p>
-            <p>o Điểm thi vào THPT (theo thống kê và xếp loại của SGD&ĐT Hà Nội) những năm gần đây đều đứng trong top 3 các trường có điểm TB 2 môn Toán, Văn cao nhất</p>
-            <p><b>- Bậc THPT:</b></p>
-            <p>o Các năm gần đây đều đỗ tốt nghiệp 100% (đặc biệt có năm Lương Thế Vinh là trường duy nhất ở Hà Nội đỗ tốt nghiệp 100%)</p>
-            <p>o Kết quả đỗ vào các trường Đại học thường đạt 92%</p>
-            <p>o Theo Thống kê của Bộ GD&ĐT về xếp loại các trường THPT (không kể các trường chuyên) có điểm thi vào Đại học từ cao xuống thấp</p>
-            <p style="text-indent: 2em;">§ Năm 2009 - 2010: LTV đứng thứ 7 toàn quốc, thứ 2 Hà Nội</p>
-            <p style="text-indent: 2em;">§ Năm 2010 - 2011: LTV đứng thứ 7 toàn quốc, thứ 1 Hà Nội</p>
+            <h2>1. BỆNH ĐẬU MÙA KHỈ LÀ GÌ? TẠI SAO BỆNH NÀY ĐƯỢC GỌI LÀ “ĐẬU MÙA KHỈ”?</h2>
+            <p>Bệnh đậu mùa khỉ là một bệnh hiếm gặp do nhiễm virus đậu mùa khỉ (Monkeypox virus). Virus đậu mùa khỉ thuộc chi Orthopoxvirus trong họ Poxviridae. Chi Orthopoxvirus có khoảng 12 loại virus, bao gồm virus variola (gây bệnh đậu mùa ở người), virus gây bệnh đậu mùa ở bò, virus gây bệnh đậu mùa ở ngựa, virus gây bệnh đậu mùa ở khỉ… Đây là bệnh lây nhiễm từ động vật sang người. Bệnh cũng có thể lây truyền giữa người với người khi tiếp xúc gần gũi, lây qua vết thương, dịch cơ thể, giọt bắn và qua tiếp xúc với các vật dụng, đồ dùng bị nhiễm mầm bệnh.</p>
+            <h2>2. DẤU HIỆU NHẬN BIẾT VÀ GIẢI PHÁP PHÒNG NGỪA BỆNH ĐẬU MÙA KHỈ:</h2>
+            <p>Trước tiên nguy cơ lây bệnh được xác định có thể là liên quan đến vấn đề giọt bắn ở đường hô hấp. Khi sống chung hay dùng chung đồ với người mắc bệnh đậu mùa khỉ thì con người cũng sẽ có nguy cơ mắc bệnh. Triệu chứng các ca bệnh ghi nhận đều thấy rằng biểu hiện ban đầu là sốt, đau đầu, ớn lạnh, sưng hạch bạch huyết và kiệt sức. Với người bệnh đã khởi phát cơn sốt phần lớn người bệnh đều nổi ban kèm ngứa ngáy 1 – 3 ngày. Thời kỳ ủ bệnh (thời gian từ khi nhiễm bệnh đến khi có triệu chứng) đối với bệnh đậu mùa khỉ thường là 6-13 ngày nhưng có thể từ 5-21 ngày. Bệnh thường kéo dài trong 2- 3 tuần. Mặt là bộ phận đầu tiên xuất hiện và sau đó sẽ lan rộng sang các bộ phận còn lại trên cơ thể. Ban đầu mụn có mủ nước sẽ chỉ xuất hiện lưa thưa nhưng sau đó sẽ phát tán và số nốt có thể đến hàng nghìn. Bên trong mỗi nốt mụn chứa đầy dịch được gọi là mủ. Khi điều trị tốt chúng sẽ dần đóng vảy và tiêu biến dần đến khi da trở lại trạng thái bình thường.</p>
+            <h3>3. ĐỂ PHÒNG CHỐNG BỆNH ĐẬU MÙA CHÚNG TA CẦN THỰC HIỆN CÁC BIỆN PHÁP SAU:</h3>
+            <p>Che miệng và mũi khi ho hoặc hắt hơi để làm giảm phát tán các dịch tiết. Không khạc nhổ bừa bãi nơi công cộng. Thường xuyên rửa tay bằng xà phòng và nước sạch hoặc dung dịch sát khuẩn tay. Người có triệu chứng phát ban cấp tính không rõ nguyên nhân kèm theo một hoặc nhiều triệu chứng nghi ngờ cần liên hệ với cơ sở y tế để được theo dõi, tư vấn kịp thời. Đồng thời, cần tự cách ly Cần tránh tiếp xúc với động vật hoang dại (chết hoặc sống). Đảm bảo an toàn thực phẩm, thực hiện lối sống lành mạnh, tăng cường vận động thể lực, nâng cao sức khỏe.</p>
         </div>
         <div class="body_right">
             <div class="content_sukien_nav content_nav">
